# eps

./: .gitignore  CMakeLists.txt  setup.py
python/eps/: __init__.py
python/eps/communication/: __init__.py  ops.py
python/eps/executor/: __init__.py  aok_grouped_gemm.py  ops.py  silu.py
python/eps/fast_ep/: all_to_all.py  ops.py
python/eps/fast_oep/: __init__.py  all_to_all.py  ops.py
python/eps/scheduler/: __init__.py  ops.py  scheduler.py
python/eps/utils/: __init__.py  ops.py
src/common/: CMakeLists.txt  common.cuh  cuda_fp8_utils.cu  cuda_fp8_utils.h  cuda_types.cuh  cuda_utils.cuh  debug.cu  debug.cuh  reduce_kernel_utils.cuh  torch_utils.h
src/communication/: CMakeLists.txt  allgather_runner.cu  allgather_runner.cuh  alltoall_kernels.cuh  alltoall_runner.cu  alltoall_runner.cuh  msccl_comm.cu  msccl_comm.cuh  reducescatter_runner.cu  reducescatter_runner.cuh  tp_dp_convertor.cu  tp_dp_convertor.cuh
src/communication/bindings/: bindings.cpp  communication_ops.cu  communication_ops.h
src/executor/: CMakeLists.txt  activations.cu  activations.cuh  aok_grouped_gemm.cu  aok_grouped_gemm.cuh
src/executor/bindings/: aok_grouped_gemm_ops.cu  aok_grouped_gemm_ops.h  bindings.cpp  silu_ops.cu  silu_ops.h
src/fast_ep/: CMakeLists.txt
src/fast_ep/all_to_all/: CMakeLists.txt  fast_ep.cu  fast_ep.cuh  fast_ep_kernels.cu  fast_ep_kernels.cuh
src/fast_ep/bindings/: all_to_all_ops.cu  all_to_all_ops.h  bindings.cpp
src/fast_oep/: CMakeLists.txt
src/fast_oep/all_to_all/: CMakeLists.txt  fast_oep.cu  fast_oep.cuh  fast_oep_kernels.cu  fast_oep_kernels.cuh
src/fast_oep/bindings/: all_to_all_ops.cu  all_to_all_ops.h  bindings.cpp
src/gemm/: CMakeLists.txt  utils.cuh
src/gemm/aok_grouped_gemm/include/aok/operations/default_hopper_grouped_gemm/: default_hopper_gmm_kernel.h
src/gemm/aok_grouped_gemm/src/operations/: hopper_grouped_gemm.cu  hopper_grouped_gemm.h  hopper_grouped_gemm_kernel.cu  hopper_grouped_gemm_kernel.h
src/gemm/cutlass_extensions/cutlass/epilogue/collective/: collective_builder.hpp  collective_epilogue.hpp  detail.hpp
src/gemm/cutlass_extensions/cutlass/epilogue/collective/builders/: sm90_builder.inl
src/gemm/cutlass_extensions/epilogue/collective/: collective_builder.hpp  default_epilogue.hpp  default_epilogue_array.hpp  detail.hpp  epilogue_tensor_broadcast.hpp  sm100_epilogue_array_nosmem.hpp  sm100_epilogue_array_tma_warpspecialized.hpp  sm100_epilogue_nosmem.hpp  sm100_epilogue_tma_warpspecialized.hpp  sm70_epilogue_vectorized_array.hpp  sm90_builder.inl  sm90_epilogue_array_tma_warpspecialized.hpp  sm90_epilogue_tma_warpspecialized.hpp
src/gemm/cutlass_extensions/gemm/: aok_group_array_problem_shape.hpp
src/gemm/cutlass_extensions/gemm/collective/: collective_builder.hpp  sm90_mma_array_tma_gmma_ss_warpspecialized.hpp
src/gemm/cutlass_extensions/gemm/collective/builders/: sm90_gmma_builder.inl
src/gemm/cutlass_extensions/gemm/device/: gemm_universal_adapter.h  gemm_universal_base.h
src/gemm/cutlass_extensions/gemm/kernel/: default_gemm_universal.h  gemm_universal.h  gemm_universal.hpp  sm100_tile_scheduler.hpp  sm100_tile_scheduler_group.hpp  sm100_tile_scheduler_stream_k.hpp  sm90_gemm_array_tma_warpspecialized_pingpong.hpp  sm90_gemm_tma_warpspecialized_cooperative.hpp  sm90_tile_scheduler.hpp  sm90_tile_scheduler_group.hpp  sm90_tile_scheduler_stream_k.hpp  static_tile_scheduler.hpp  tile_scheduler.hpp  tile_scheduler_params.h
src/quant/: CMakeLists.txt  fp8.cu  fp8.cuh
src/scheduler/: CMakeLists.txt  comm_expander.cu  comm_expander.cuh  comm_expander_ver2.cu  comm_quant.cu  comm_quant.cuh  common.cuh  context.cu  gemm_executor_interface.cuh  gemm_expander.cu  gemm_expander.cuh  gemm_expander_ver2.cu  global_reducer.cu  global_reducer.cuh  global_reducer_ver2.cu  local_reducer.cu  local_reducer.cuh  local_reducer_ver2.cu  processors.cu  scheduler.cu  scheduler.cuh  utils.cuh  zero_reducer.cu  zero_reducer.cuh
src/scheduler/bindings/: bindings.cpp  scheduler_ops.cu  scheduler_ops.h
src/utils/: CMakeLists.txt  rms_norm.cu  rms_norm.cuh  topk_sigmoid.cu  topk_sigmoid.cuh
src/utils/bindings/: bindings.cpp  th_rms_norm.cu  th_topk_sigmoid.cu  utils_ops.h
